--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -12,6 +12,7 @@
                 {% for post in site.posts %}
                     <div class="portfolio-flex-item portfolio-item">
                         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                        <!-- <a href="{{ post.pdf_link }}" class="portfolio-link"> -->
                             <div class="caption">
                                 <div class="caption-content">
                                     <i class="fa fa-search-plus fa-3x"></i>
